added makefile for library in platform/LINUX-GNU
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@145 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -48,6 +48,7 @@ GEMIPM2K/num_methods.h -text
 GEMIPM2K/obj/Readme.txt -text
 GEMIPM2K/platform/CRAYXT3-catamount/Makefile -text
 GEMIPM2K/platform/Linux-GNU/Makefile -text
+GEMIPM2K/platform/Linux-GNU/Makefile.lib -text
 GEMIPM2K/platform/Linux-PGI/Makefile -text
 GEMIPM2K/platform/Linux-PGI/Makefile.prof -text
 GEMIPM2K/platform/other/Makefile -text
