changed the code in order to get PGI running ... tested PGI on Merlin... changes are necessary, as PGi provides not the possibility to remove the additional undersocres from the name (like no_underscore under intel/gnu)
PGI code fails at the same position as GNU and Intel


git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@146 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/mcotac-gem/Makefile
+++ b/mcotac-gem/Makefile
@@ -1,15 +1,15 @@
-CC = gcc-4.3
-CXX = gcc-4.3
-FORT = gfortran-4.3
+CC = gcc
+CXX = gcc
+FORT = gfortran
 CFLAGS = -c  -g -O2 -DIPMGEMPLUGIN -pedantic -fno-nonansi-builtins -D__unix 
 # -lstd -lC -lpgc -lrt -Msecond_underscore
 CCFLAGS =   -c -g -O2 -DIPMGEMPLUGIN -D__unix
 CCFLAGS1 =   -c -g -O2 -DIPMGEMPLUGIN -D__unix
 FFLAGS = -c -g -O2 -fbounds-check -fno-underscoring -DIPMGEMPLUGIN -D__unix -D__GNU
-LINK = gcc-4.3
+LINK = gcc
 LFLAGS = -lstdc++ -lgfortran
-GEMINCLUDE = /home/kosakowski/SOFT/GEMS/trunk/GEMIPM2K
-GEMLIB     = /home/kosakowski/SOFT/GEMS/trunk/GEMIPM2K
+GEMINCLUDE = /home5/kosakowski/mcotac-gem/GEMIPM2K
+GEMLIB     = /home5/kosakowski/mcotac-gem/GEMIPM2K
 EXEC = mcotacgem-gnu
 
 ${EXEC}: mcotac.o mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
