--- a/.gitattributes
+++ b/.gitattributes
@@ -74,13 +74,51 @@ GEMIPM2K/tnt_i_refvec.h -text
 GEMIPM2K/v_user.h -text
 GEMIPM2K/verror.h -text
 GEMIPM2K/win32-run.bat -text
+mcotac-gem/GEMIPM2K/Makefile.lib -text
+mcotac-gem/GEMIPM2K/array.h -text
+mcotac-gem/GEMIPM2K/databr.h -text
+mcotac-gem/GEMIPM2K/datach.h -text
+mcotac-gem/GEMIPM2K/gdatastream.cpp -text
+mcotac-gem/GEMIPM2K/gdatastream.h -text
+mcotac-gem/GEMIPM2K/gstring.cpp -text
+mcotac-gem/GEMIPM2K/gstring.h -text
+mcotac-gem/GEMIPM2K/io_arrays.cpp -text
+mcotac-gem/GEMIPM2K/io_arrays.h -text
+mcotac-gem/GEMIPM2K/ipm_chemical.cpp -text
+mcotac-gem/GEMIPM2K/ipm_chemical2.cpp -text
+mcotac-gem/GEMIPM2K/ipm_chemical3.cpp -text
+mcotac-gem/GEMIPM2K/ipm_main.cpp -text
+mcotac-gem/GEMIPM2K/ipm_simplex.cpp -text
+mcotac-gem/GEMIPM2K/jama_cholesky.h -text
+mcotac-gem/GEMIPM2K/jama_lu.h -text
+mcotac-gem/GEMIPM2K/m_const.h -text
+mcotac-gem/GEMIPM2K/m_param.h -text
+mcotac-gem/GEMIPM2K/ms_multi.h -text
+mcotac-gem/GEMIPM2K/ms_multi_file.cpp -text
+mcotac-gem/GEMIPM2K/ms_multi_format.cpp -text
+mcotac-gem/GEMIPM2K/ms_param.cpp -text
+mcotac-gem/GEMIPM2K/node.cpp -text
+mcotac-gem/GEMIPM2K/node.h -text
+mcotac-gem/GEMIPM2K/node_format.cpp -text
+mcotac-gem/GEMIPM2K/num_methods.cpp -text
+mcotac-gem/GEMIPM2K/num_methods.h -text
+mcotac-gem/GEMIPM2K/s_fgl.cpp -text
+mcotac-gem/GEMIPM2K/s_fgl.h -text
+mcotac-gem/GEMIPM2K/s_fgl2.cpp -text
+mcotac-gem/GEMIPM2K/tnt.h -text
+mcotac-gem/GEMIPM2K/tnt_array1d.h -text
+mcotac-gem/GEMIPM2K/tnt_array2d.h -text
+mcotac-gem/GEMIPM2K/tnt_i_refvec.h -text
+mcotac-gem/GEMIPM2K/v_user.h -text
+mcotac-gem/GEMIPM2K/verror.h -text
 mcotac-gem/MCOTAC-GEM/MySystem-dat.lst -text
-mcotac-gem/MCOTAC-GEM/MySystem-dbr-0007.dat -text
-mcotac-gem/MCOTAC-GEM/MySystem-dbr-0008.dat -text
+mcotac-gem/MCOTAC-GEM/MySystem-dbr-0-0000.dat -text
+mcotac-gem/MCOTAC-GEM/MySystem-dbr-0-0000.dat.short -text
+mcotac-gem/MCOTAC-GEM/MySystem-dbr-0-0001.dat -text
+mcotac-gem/MCOTAC-GEM/MySystem-dbr-0-0001.dat.short -text
 mcotac-gem/MCOTAC-GEM/MySystem-dch.dat -text
 mcotac-gem/MCOTAC-GEM/MySystem-ipm.dat -text
-mcotac-gem/MCOTAC-GEM/MySystem.ipm -text
-mcotac-gem/MCOTAC-GEM/MySystem.txt -text
+mcotac-gem/MCOTAC-GEM/MySystem-ipm.dat.short -text
 mcotac-gem/MCOTAC-GEM/caldpl.zip -text
 mcotac-gem/Makefile -text
 mcotac-gem/TEST.INI -text
@@ -151,6 +189,7 @@ mcotac-gem/p_ibxe.dat -text
 mcotac-gem/p_ibxf.dat -text
 mcotac-gem/platform/GNU/Makefile -text
 mcotac-gem/platform/GNU/Makefile.lib -text
+mcotac-gem/platform/GNU/readme -text
 mcotac-gem/platform/INTEL/Makefile -text
 mcotac-gem/platform/PGI/Makefile -text
 mcotac-gem/platform/PGI/ipm_main.cpp -text
