Removed GEMIPM2K/ from mcotac-gem svn module and changed the Makefile for GNU accordingly; small changes in GEMIPM2K module (Makefile, exe file name, test batch files)  DK
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@156 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@ GEMIPM2K/.cproject -text
 GEMIPM2K/.project -text
 GEMIPM2K/Makefile -text
 GEMIPM2K/Makefile.MinGW -text
+GEMIPM2K/Makefile.lib -text
 GEMIPM2K/array.h -text
 GEMIPM2K/databr.h -text
 GEMIPM2K/datach.h -text
@@ -32,7 +33,6 @@ GEMIPM2K/ipm_main.cpp -text
 GEMIPM2K/ipm_simplex.cpp -text
 GEMIPM2K/jama_cholesky.h -text
 GEMIPM2K/jama_lu.h -text
-GEMIPM2K/linux-run.bat -text
 GEMIPM2K/m_const.h -text
 GEMIPM2K/m_param.h -text
 GEMIPM2K/main.cpp -text
@@ -67,6 +67,7 @@ GEMIPM2K/test/CalcColumn-dch.dat -text
 GEMIPM2K/test/CalcColumn-ipm.dat -text
 GEMIPM2K/test/Readme.1st -text
 GEMIPM2K/test/TEST.BAT -text
+GEMIPM2K/test/test.sh -text
 GEMIPM2K/tnt.h -text
 GEMIPM2K/tnt_array1d.h -text
 GEMIPM2K/tnt_array2d.h -text
@@ -74,43 +75,6 @@ GEMIPM2K/tnt_i_refvec.h -text
 GEMIPM2K/v_user.h -text
 GEMIPM2K/verror.h -text
 GEMIPM2K/win32-run.bat -text
-mcotac-gem/GEMIPM2K/Makefile.lib -text
-mcotac-gem/GEMIPM2K/array.h -text
-mcotac-gem/GEMIPM2K/databr.h -text
-mcotac-gem/GEMIPM2K/datach.h -text
-mcotac-gem/GEMIPM2K/gdatastream.cpp -text
-mcotac-gem/GEMIPM2K/gdatastream.h -text
-mcotac-gem/GEMIPM2K/gstring.cpp -text
-mcotac-gem/GEMIPM2K/gstring.h -text
-mcotac-gem/GEMIPM2K/io_arrays.cpp -text
-mcotac-gem/GEMIPM2K/io_arrays.h -text
-mcotac-gem/GEMIPM2K/ipm_chemical.cpp -text
-mcotac-gem/GEMIPM2K/ipm_chemical2.cpp -text
-mcotac-gem/GEMIPM2K/ipm_chemical3.cpp -text
-mcotac-gem/GEMIPM2K/ipm_main.cpp -text
-mcotac-gem/GEMIPM2K/ipm_simplex.cpp -text
-mcotac-gem/GEMIPM2K/jama_cholesky.h -text
-mcotac-gem/GEMIPM2K/jama_lu.h -text
-mcotac-gem/GEMIPM2K/m_const.h -text
-mcotac-gem/GEMIPM2K/m_param.h -text
-mcotac-gem/GEMIPM2K/ms_multi.h -text
-mcotac-gem/GEMIPM2K/ms_multi_file.cpp -text
-mcotac-gem/GEMIPM2K/ms_multi_format.cpp -text
-mcotac-gem/GEMIPM2K/ms_param.cpp -text
-mcotac-gem/GEMIPM2K/node.cpp -text
-mcotac-gem/GEMIPM2K/node.h -text
-mcotac-gem/GEMIPM2K/node_format.cpp -text
-mcotac-gem/GEMIPM2K/num_methods.cpp -text
-mcotac-gem/GEMIPM2K/num_methods.h -text
-mcotac-gem/GEMIPM2K/s_fgl.cpp -text
-mcotac-gem/GEMIPM2K/s_fgl.h -text
-mcotac-gem/GEMIPM2K/s_fgl2.cpp -text
-mcotac-gem/GEMIPM2K/tnt.h -text
-mcotac-gem/GEMIPM2K/tnt_array1d.h -text
-mcotac-gem/GEMIPM2K/tnt_array2d.h -text
-mcotac-gem/GEMIPM2K/tnt_i_refvec.h -text
-mcotac-gem/GEMIPM2K/v_user.h -text
-mcotac-gem/GEMIPM2K/verror.h -text
 mcotac-gem/MCOTAC-GEM/MySystem-dat.lst -text
 mcotac-gem/MCOTAC-GEM/MySystem-dbr-0-0000.dat -text
 mcotac-gem/MCOTAC-GEM/MySystem-dbr-0-0000.dat.short -text
