Cleanup of node-gem module (GNU Makefile)  (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@160 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/node-gem/Makefile
+++ b/node-gem/Makefile
@@ -293,7 +293,7 @@ obj/io_arrays.o: ../GEMIPM2K/io_arrays.cpp ../GEMIPM2K/io_arrays.h \
 		../GEMIPM2K/array.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o obj/io_arrays.o ../GEMIPM2K/io_arrays.cpp
 
-obj/main.o: main.cpp node.h \
+obj/main.o: main.cpp ../GEMIPM2K/node.h \
 		../GEMIPM2K/m_param.h \
 		../GEMIPM2K/datach.h \
 		../GEMIPM2K/databr.h \
