--- a/mcotac-gem/platform/PGI/Makefile
+++ b/mcotac-gem/platform/PGI/Makefile
@@ -8,16 +8,16 @@ CCFLAGS1 =   -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__PGI -Mpreprocess
 FFLAGS = -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__GNU -D__PGI -Mnosecond_underscore -Mpreprocess
 LINK = pgCC
 LFLAGS = 
-LIBS = -lstdc++ -lpgf90 -lpgf90_rpm1 -lpgf902 -lpgf90rtl -lpgftnrtl 
-GEMINCLUDE = ../GEMIPM2K
-GEMLIB     = -L../GEMIPM2K -lgemipm2k-pgi
+LIBS = -lrt -lstdc++ -lpgf90 -lpgf90_rpm1 -lpgf902 -lpgf90rtl -lpgftnrtl 
+GEMINCLUDE = /home5/kosakowski/mcotac-gem/GEMIPM2K
+GEMLIB     = -L/home5/kosakowski/mcotac-gem/GEMIPM2K -lgemipm2k-pgi
 EXEC = mcotacgem-pgi
 
 ${EXEC}: mcotac.o mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
        f_gem_node.o
        
 	${LINK} -o ${EXEC}  ${LFLAGS} mcotac.o mcotac1d.o datio.o \
-          erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o f_gem_node.o ${GEMLIB} ${LIBS}
+          erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o f_gem_node.o  ${LIBS} ${GEMLIB}
 
 mcotac1d.o: mcotac1d.f gwheader.inc kinetics.inc
 	cp mcotac1d.f mcotac1d.fpp
@@ -46,17 +46,17 @@ hydro1d_.o: hydro1d_.c  gwheader.h
 mcotac.o: mcotac.cpp 
 	$(CXX)  $(CCFLAGS) mcotac.cpp
 
-f_gem_node.o: f_gem_node.cpp ${GEMINCLUDE}/node.h \
-		${GEMINCLUDE}/m_param.h \
-		${GEMINCLUDE}/datach.h \
-		${GEMINCLUDE}/databr.h \
-		${GEMINCLUDE}/gdatastream.h \
-		${GEMINCLUDE}/ms_multi.h \
-		${GEMINCLUDE}/verror.h \
-		${GEMINCLUDE}/gstring.h \
-		${GEMINCLUDE}/array.h \
-		${GEMINCLUDE}/m_const.h \
-		${GEMINCLUDE}/v_user.h
+f_gem_node.o: f_gem_node.cpp ../GEMIPM2K/node.h \
+		../GEMIPM2K/m_param.h \
+		../GEMIPM2K/datach.h \
+		../GEMIPM2K/databr.h \
+		../GEMIPM2K/gdatastream.h \
+		../GEMIPM2K/ms_multi.h \
+		../GEMIPM2K/verror.h \
+		../GEMIPM2K/gstring.h \
+		../GEMIPM2K/array.h \
+		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/v_user.h
 	$(CXX)  $(CCFLAGS1) -I${GEMINCLUDE}  f_gem_node.cpp
 
 #gwheader.h: gwheader.h
