Re-arranged svn modules in GEMIPM2K standalone repository, added inspace-sep and splitted nodearray-gem to nodearray-gem and gem2mt-sep modules. Created makefiles for GNU Linux gcc-4.3. Added nodearray.h and nodearray.cpp to GEMIPM2K library (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@162 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,8 @@ GEMIPM2K/ms_param.cpp -text
 GEMIPM2K/node.cpp -text
 GEMIPM2K/node.h -text
 GEMIPM2K/node_format.cpp -text
+GEMIPM2K/nodearray.cpp -text
+GEMIPM2K/nodearray.h -text
 GEMIPM2K/num_methods.cpp -text
 GEMIPM2K/num_methods.h -text
 GEMIPM2K/obj/Readme.txt -text
@@ -75,6 +77,42 @@ GEMIPM2K/tnt_i_refvec.h -text
 GEMIPM2K/v_user.h -text
 GEMIPM2K/verror.h -text
 GEMIPM2K/win32-run.bat -text
+gem2mt-sep/CalcColumn.BAT -text
+gem2mt-sep/Makefile -text
+gem2mt-sep/Makefile.MinGW -text
+gem2mt-sep/doc/Readme.1st -text
+gem2mt-sep/doc/filelist-doc.txt -text
+gem2mt-sep/gem2mt-sep.pro -text
+gem2mt-sep/ipmlog.txt -text
+gem2mt-sep/m_gem2mtbox.cpp -text
+gem2mt-sep/m_gem2mtt.cpp -text
+gem2mt-sep/main.cpp -text
+gem2mt-sep/ms_gem2mt.cpp -text
+gem2mt-sep/ms_gem2mt.h -text
+gem2mt-sep/obj/Readme.txt -text
+gem2mt-sep/particlearray.cpp -text
+gem2mt-sep/particlearray.h -text
+gem2mt-sep/platform/Linux-GNU/Makefile -text
+gem2mt-sep/platform/Linux-PGI/Makefile -text
+gem2mt-sep/platform/other/Makefile -text
+gem2mt-sep/platform/win32bcc/Makefile -text
+gem2mt-sep/platform/win32msvc/Makefile -text
+gem2mt-sep/test/CalcColumn-dat.lst -text
+gem2mt-sep/test/CalcColumn-dbr-0-0000.dat -text
+gem2mt-sep/test/CalcColumn-dbr-0-0001.dat -text
+gem2mt-sep/test/CalcColumn-dch.dat -text
+gem2mt-sep/test/CalcColumn-ipm.dat -text
+gem2mt-sep/test/CalcColumn.BAT -text
+gem2mt-sep/test/ICaq-log.dat -text
+gem2mt-sep/test/ICdif-log.dat -text
+gem2mt-sep/test/Ph-log.dat -text
+gem2mt-sep/test/Readme.1st -text
+gem2mt-sep/test/ipmlog.txt -text
+gem2mt-sep/test/testA-W32.bat -text
+gem2mt-sep/test/testA.dat -text
+gem2mt-sep/test/testW-W32.bat -text
+gem2mt-sep/test/testW.dat -text
+gem2mt-sep/test/testW.out -text
 mcotac-gem/MCOTAC-GEM/MySystem-dat.lst -text
 mcotac-gem/MCOTAC-GEM/MySystem-dbr-0-0000.dat -text
 mcotac-gem/MCOTAC-GEM/MySystem-dbr-0-0000.dat.short -text
@@ -302,6 +340,7 @@ nodearray-gem/ms_param.cpp -text
 nodearray-gem/node.cpp -text
 nodearray-gem/node.h -text
 nodearray-gem/node_format.cpp -text
+nodearray-gem/nodearray-gem.pro -text
 nodearray-gem/nodearray.cpp -text
 nodearray-gem/nodearray.h -text
 nodearray-gem/num_methods.cpp -text
@@ -334,3 +373,17 @@ nodearray-gem/tnt_array2d.h -text
 nodearray-gem/tnt_i_refvec.h -text
 nodearray-gem/v_user.h -text
 nodearray-gem/verror.h -text
+unspace-sep/Makefile -text
+unspace-sep/m_unsp_out.cpp -text
+unspace-sep/m_unsp_stat.cpp -text
+unspace-sep/main.cpp -text
+unspace-sep/ms_unspace.cpp -text
+unspace-sep/ms_unspace.h -text
+unspace-sep/platform/Linux-GNU/Makefile -text
+unspace-sep/test/Portlandit-dat.lst -text
+unspace-sep/test/Portlandit-dbr-0-0000.dat -text
+unspace-sep/test/Portlandit-dch.dat -text
+unspace-sep/test/Portlandit-ipm.dat -text
+unspace-sep/test/test1-uns.dat -text
+unspace-sep/unspace-sep.pro -text
+unspace-sep/unspace.bat -text
