added some basic features for MPI
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@166 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -164,6 +164,7 @@ mcotac-gem/platform/GNU/Makefile.lib -text
 mcotac-gem/platform/GNU/readme -text
 mcotac-gem/platform/INTEL/Makefile -text
 mcotac-gem/platform/PGI/Makefile -text
+mcotac-gem/platform/PGI/Makefile.mpi -text
 mcotac-gem/platform/PGI/ipm_main.cpp -text
 mcotac-gem/platform/readme.1st -text
 mcotac-gem/por001.dat -text
