Temporarily added an old variant of main.cpp for writing up the test example here (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@167 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -309,6 +309,7 @@ nodearray-gem/Makefile -text
 nodearray-gem/doc/Readme.1st -text
 nodearray-gem/doc/filelist-doc.txt -text
 nodearray-gem/main.cpp -text
+nodearray-gem/main.cpp.template -text
 nodearray-gem/nodearray-gem.pro -text
 nodearray-gem/obj/Readme.txt -text
 nodearray-gem/platform/Linux-GNU/Makefile -text
