restructured the repository... source code is not in subdir "source" test data is now in subdir "test" platform still contains the Makefiles Configuration files from e.g. Windows Builder should go into platform or in an own directory removed obsolete files from the main directory
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@169 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -124,6 +124,61 @@ mcotac-gem/platform/PGI/Makefile -text
 mcotac-gem/platform/PGI/Makefile.mpi -text
 mcotac-gem/platform/PGI/ipm_main.cpp -text
 mcotac-gem/platform/readme.1st -text
+mcotac-gem/test/TEST.INI -text
+mcotac-gem/test/am0001.dat -text
+mcotac-gem/test/c_2daa.dat -text
+mcotac-gem/test/c_2dab.dat -text
+mcotac-gem/test/c_2dac.dat -text
+mcotac-gem/test/c_2dad.dat -text
+mcotac-gem/test/c_2dae.dat -text
+mcotac-gem/test/c_2dsa.dat -text
+mcotac-gem/test/c_2dsb.dat -text
+mcotac-gem/test/c_2dsc.dat -text
+mcotac-gem/test/c_2dsd.dat -text
+mcotac-gem/test/c_2dse.dat -text
+mcotac-gem/test/conc1t.dat -text
+mcotac-gem/test/conc2t.dat -text
+mcotac-gem/test/conc3t.dat -text
+mcotac-gem/test/conc4t.dat -text
+mcotac-gem/test/conc5t.dat -text
+mcotac-gem/test/conca.dat -text
+mcotac-gem/test/concb.dat -text
+mcotac-gem/test/concc.dat -text
+mcotac-gem/test/concd.dat -text
+mcotac-gem/test/conce.dat -text
+mcotac-gem/test/h00001.dat -text
+mcotac-gem/test/iche01.dat -text
+mcotac-gem/test/initial.out -text
+mcotac-gem/test/input_1.dat -text
+mcotac-gem/test/ipmlog.txt -text
+mcotac-gem/test/ir0001.dat -text
+mcotac-gem/test/mco_out.out -text
+mcotac-gem/test/p_ibxa.dat -text
+mcotac-gem/test/p_ibxb.dat -text
+mcotac-gem/test/p_ibxc.dat -text
+mcotac-gem/test/p_ibxd.dat -text
+mcotac-gem/test/p_ibxe.dat -text
+mcotac-gem/test/por001.dat -text
+mcotac-gem/test/qn0001.dat -text
+mcotac-gem/test/qr0001.dat -text
+mcotac-gem/test/ra.dat -text
+mcotac-gem/test/rb.dat -text
+mcotac-gem/test/rc.dat -text
+mcotac-gem/test/rd.dat -text
+mcotac-gem/test/re.dat -text
+mcotac-gem/test/solids.dat -text
+mcotac-gem/test/ss0001.dat -text
+mcotac-gem/test/test11.itm -text
+mcotac-gem/test/va.dat -text
+mcotac-gem/test/vb.dat -text
+mcotac-gem/test/vc.dat -text
+mcotac-gem/test/vd.dat -text
+mcotac-gem/test/ve.dat -text
+mcotac-gem/test/wa.dat -text
+mcotac-gem/test/wb.dat -text
+mcotac-gem/test/wc.dat -text
+mcotac-gem/test/wd.dat -text
+mcotac-gem/test/we.dat -text
 node-gem/Makefile -text
 node-gem/Makefile.MinGW -text
 node-gem/doc/Readme.1st -text
