--- a/.gitattributes
+++ b/.gitattributes
@@ -124,6 +124,19 @@ mcotac-gem/platform/PGI/Makefile -text
 mcotac-gem/platform/PGI/Makefile.mpi -text
 mcotac-gem/platform/PGI/ipm_main.cpp -text
 mcotac-gem/platform/readme.1st -text
+mcotac-gem/source/Makefile -text
+mcotac-gem/source/datio.f -text
+mcotac-gem/source/erech.f -text
+mcotac-gem/source/f_gem_node.cpp -text
+mcotac-gem/source/f_gem_node.h -text
+mcotac-gem/source/f_gem_node.inc -text
+mcotac-gem/source/gwheader.h -text
+mcotac-gem/source/gwheader.inc -text
+mcotac-gem/source/inistat2.f -text
+mcotac-gem/source/inparf.f -text
+mcotac-gem/source/kinetics.inc -text
+mcotac-gem/source/mcotac.cpp -text
+mcotac-gem/source/mcotac1d.f -text
 mcotac-gem/test/TEST.INI -text
 mcotac-gem/test/am0001.dat -text
 mcotac-gem/test/c_2daa.dat -text
