gnu makefile in source
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@173 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/mcotac-gem/source/Makefile
+++ b/mcotac-gem/source/Makefile
@@ -1,23 +1,22 @@
-CC = mpicc
-CXX = mpicxx
-FORT = mpif90
-CFLAGS = -c  -g -O2 -DIPMGEMPLUGIN -D__unix -D__PGI -Mpreprocess
+CC = gcc-4.3
+CXX = g++-4.3
+FORT = gfortran-4.3
+CFLAGS = -c  -g -O2 -DIPMGEMPLUGIN -pedantic -fno-nonansi-builtins -D__unix 
 # -lstd -lC -lpgc -lrt -Msecond_underscore
-CCFLAGS =   -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__PGI -Mpreprocess
-CCFLAGS1 =   -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__PGI -Mpreprocess
-FFLAGS = -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__GNU -D__PGI -Mnosecond_underscore -Mpreprocess -D__MPI
-LINK = mpif90
-LFLAGS = 
-LIBS = -lrt -lstd -lC -lpgc 
-GEMINCLUDE = ../GEMIPM2K
-GEMLIB     = -L../GEMIPM2K -lgemipm2k-pgi
-EXEC = mcotacgem-pgi
+CCFLAGS =   -c -g -O2 -DIPMGEMPLUGIN -D__unix
+CCFLAGS1 =   -c -g -O2 -DIPMGEMPLUGIN -D__unix
+FFLAGS = -c -g -O2 -fbounds-check -fno-underscoring -DIPMGEMPLUGIN -D__unix -D__GNU
+LINK = gfortran-4.3
+LFLAGS = -lstdc++ -lgfortran
+GEMINCLUDE = ../../../GEMIPM2K
+GEMLIB     = ../../../GEMIPM2K
+EXEC = mcotacgem-gnu
 
 ${EXEC}: mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
        f_gem_node.o
        
 	${LINK} -o ${EXEC}  ${LFLAGS} mcotac1d.o datio.o \
-          erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o f_gem_node.o  ${GEMLIB}  ${LIBS}
+                 erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o f_gem_node.o -L${GEMLIB} -lgemipm2k
 
 mcotac1d.o: mcotac1d.f gwheader.inc kinetics.inc
 	cp mcotac1d.f mcotac1d.fpp
@@ -43,18 +42,17 @@ wegdat1d_.o: wegdat1d_.c gwheader.h
 hydro1d_.o: hydro1d_.c  gwheader.h
 	$(CC)  $(CFLAGS)  hydro1d_.c
 
-
-f_gem_node.o: f_gem_node.cpp ../GEMIPM2K/node.h \
-		../GEMIPM2K/m_param.h \
-		../GEMIPM2K/datach.h \
-		../GEMIPM2K/databr.h \
-		../GEMIPM2K/gdatastream.h \
-		../GEMIPM2K/ms_multi.h \
-		../GEMIPM2K/verror.h \
-		../GEMIPM2K/gstring.h \
-		../GEMIPM2K/array.h \
-		../GEMIPM2K/m_const.h \
-		../GEMIPM2K/v_user.h
+f_gem_node.o: f_gem_node.cpp ${GEMINCLUDE}/node.h \
+		${GEMINCLUDE}/m_param.h \
+		${GEMINCLUDE}/datach.h \
+		${GEMINCLUDE}/databr.h \
+		${GEMINCLUDE}/gdatastream.h \
+		${GEMINCLUDE}/ms_multi.h \
+		${GEMINCLUDE}/verror.h \
+		${GEMINCLUDE}/gstring.h \
+		${GEMINCLUDE}/array.h \
+		${GEMINCLUDE}/m_const.h \
+		${GEMINCLUDE}/v_user.h
 	$(CXX)  $(CCFLAGS1) -I${GEMINCLUDE}  f_gem_node.cpp
 
 #gwheader.h: gwheader.h
@@ -63,4 +61,4 @@ f_gem_node.o: f_gem_node.cpp ../GEMIPM2K/node.h \
 #kinetics.inc: kinetics.inc
 
 clean: 
-	rm -f *.o *.ti
+	rm -f *.o *.ti *.fpp
