same as last one
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@177 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/mcotac-gem/source/Makefile
+++ b/mcotac-gem/source/Makefile
@@ -1,13 +1,13 @@
 CC = mpicc
 CXX = mpiCC
 FORT = mpif90
-CFLAGS = -c  -g -O -DIPMGEMPLUGIN -pedantic -D__unix -D__GNU  -D__MPI
+CFLAGS = -c  -g -O -DIPMGEMPLUGIN -pedantic -D__unix -D__GNU  -D__MPI -fbounds-check 
 # -lstd -lC -lpgc -lrt -Msecond_underscore
-CCFLAGS =   -c -g -O -DIPMGEMPLUGIN -D__unix -D__MPI -D__GNU 
-CCFLAGS1 =   -c -g -O -DIPMGEMPLUGIN -D__unix -D__MPI -D__GNU 
-FFLAGS = -c -g -O -fno-underscoring -fdefault-real-8 -fopenmp -DIPMGEMPLUGIN -D__unix -D__GNU -D__MPI 
+CCFLAGS =   -c -g -O -DIPMGEMPLUGIN -D__unix -D__MPI -D__GNU -fbounds-check 
+CCFLAGS1 =   -c -g -O -DIPMGEMPLUGIN -D__unix -D__MPI -D__GNU -fbounds-check 
+FFLAGS = -c -g -O -fno-underscoring -fbounds-check -DIPMGEMPLUGIN -D__unix -D__GNU -D__MPI 
 LINK = mpif90
-LFLAGS = -lstdc++ -lgfortran
+LFLAGS = -fbounds-check -lstdc++ -lgfortran
 GEMINCLUDE = ../../GEMIPM2K
 GEMLIB     = ../../GEMIPM2K
 EXEC = mcotacgem-mpi
