added makefiles for kosas-spider (GNU gcc-4.3/Openmpi)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@188 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -120,6 +120,8 @@ mcotac-gem/debug/TEST.INI -text
 mcotac-gem/debug/initial.out -text
 mcotac-gem/doc/Readme.1st -text
 mcotac-gem/platform/GNU/Makefile -text
+mcotac-gem/platform/GNU/Makefile.kosas-spider -text
+mcotac-gem/platform/GNU/Makefile.kosas-spider-mpi -text
 mcotac-gem/platform/GNU/Makefile.lib -text
 mcotac-gem/platform/GNU/readme -text
 mcotac-gem/platform/INTEL/Makefile -text
