Interim commit of GEMIPM2K html doc file and changes in source code for the nodearray-gem example  (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@199 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/.gitattributes
+++ b/.gitattributes
@@ -337,7 +337,6 @@ node-gem/tp_test/CalcColumn.BAT -text
 node-gem/tp_test/CalcColumn_tp.out -text
 node-gem/tp_test/linux-run.bat -text
 node-gem/tp_test/main.cpp -text
-nodearray-gem/CalcColumn.BAT -text
 nodearray-gem/LINUX-RUN.BAT -text
 nodearray-gem/Makefile -text
 nodearray-gem/doc/Readme.1st -text
@@ -353,17 +352,15 @@ nodearray-gem/platform/win32bcc/Makefile -text
 nodearray-gem/platform/win32minGW/Makefile -text
 nodearray-gem/platform/win32minGW/object_ld_script -text
 nodearray-gem/platform/win32msvc/Makefile -text
-nodearray-gem/test/CalcColumn-dat.lst -text
-nodearray-gem/test/CalcColumn-dbr-0-0000.dat -text
-nodearray-gem/test/CalcColumn-dbr-0-0001.dat -text
-nodearray-gem/test/CalcColumn-dch.dat -text
-nodearray-gem/test/CalcColumn-ipm.dat -text
-nodearray-gem/test/CalcColumn.BAT -text
 nodearray-gem/test/Readme.1st -text
-nodearray-gem/test/testA-W32.bat -text
-nodearray-gem/test/testA.dat -text
-nodearray-gem/test/testW-W32.bat -text
-nodearray-gem/test/testW.dat -text
+nodearray-gem/test/Speed15ic-dat.lst -text
+nodearray-gem/test/Speed15ic-dbr-0-0000.dat -text
+nodearray-gem/test/Speed15ic-dbr-0-0001.dat -text
+nodearray-gem/test/Speed15ic-dch.dat -text
+nodearray-gem/test/Speed15ic-ipm.dat -text
+nodearray-gem/test/linux-run.bat -text
+nodearray-gem/test/win32-run.bat -text
+nodearray-gem/win32-run.bat -text
 unspace-sep/Makefile -text
 unspace-sep/m_unsp_out.cpp -text
 unspace-sep/m_unsp_stat.cpp -text
