Interim synchronization with the main GEMS-PSI tree (DK)
git-svn-id: svn+ssh://savannah01.psi.ch/repos/gems/GEMSTANDALONE/trunk@200 9ff7d5ee-7a19-0410-ab54-ec97d5369f81

--- a/gem2mt-sep/Makefile.MinGW
+++ b/gem2mt-sep/Makefile.MinGW
@@ -100,7 +100,7 @@ OBJECTS = obj/gstring.o \
 
 DIST	   = gem_node-sep.pro
 DESTDIR  = 
-TARGET   = gemnodar.exe
+TARGET   = gem2mts.exe
 
 first: all
 ####### Implicit rules
